/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our Samples at https://docs.gradle.org/9.3.1/samples
 * This project uses @Incubating APIs which are subject to change.
 */
plugins {
    id 'org.springframework.boot' version '4.0.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

group = 'dev.ngb'
version = '1.0-SNAPSHOT'

ext {
    set('sentryVersion', "8.27.0")
    set('springAiVersion', "1.1.0")
    set('springModulithVersion', "2.0.0")
}

allprojects {
    repositories {
        mavenCentral()
        maven { url = 'https://repo.spring.io/snapshot' }
    }
}

subprojects {
    apply plugin: 'java'

    plugins.withId('org.springframework.boot') {
        apply plugin: 'io.spring.dependency-management'

        dependencyManagement {
            imports {
                mavenBom "org.springframework.modulith:spring-modulith-bom:$springModulithVersion"
                mavenBom "io.sentry:sentry-bom:$sentryVersion"
                mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
            }
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.42'
        annotationProcessor 'org.projectlombok:lombok:1.18.42'
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}